--- a/100-005_jinbe_zame/jinbe_zame.html
+++ b/100-005_jinbe_zame/jinbe_zame.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div id="quick" class="tab-content active">
-                    <p>世界最大の魚で、おとなしい性格が特徴です。</p>
+                    <p>ジンベエザメは世界最大の魚類で、大きい個体では全長12メートル以上、体重は20トンを超えることもあります。その巨大な体とは対照的に、とてもおとなしく、人に危害を加えることはありません。</p>
                 </div>
                 <div id="detail" class="tab-content">
                     <p>熱帯〜温帯の太平洋を回遊し、鹿児島では5〜10月に見られます。プランクトンや小魚を食べ、最大で18mにも成長します。</p>
